Still working on layout issues

--- a/BloomfieldGreenhouse/css/landing.css
+++ b/BloomfieldGreenhouse/css/landing.css
@@ -48,6 +48,12 @@ video {
     z-index: 1;
 }
 
+.overlay-content {
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+}
+
 
 h1 {
     margin: 1rem 0;
@@ -56,9 +62,11 @@ h1 {
     letter-spacing: 1.3px;
 }
 
+/* i want this to be fixed to the bottom of the .overlay-content div */
 .landing-options {
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
+    margin-top: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 a.button {
